--- a/Index.html
+++ b/Index.html
@@ -2,34 +2,34 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>早うま牛しぐれ丼</title>
+  <title>テストレシピ</title>
   <script type="application/ld+json">
   {
-    "@context": "https://schema.org/",
+    "@context": "https://schema.org",
     "@type": "Recipe",
-    "name": "早うま牛しぐれ丼",
+    "name": "豚バラと野菜蒸し",
     "recipeYield": "2人分",
     "recipeIngredient": [
-      "牛肉（切り落としやこま切れの薄切り） 250〜300g",
-      "生姜（せん切り） 15g",
-      "酒 大さじ2",
-      "砂糖 大さじ2",
-      "しょうゆ 大さじ3",
-      "みりん 大さじ2"
+      "豚バラ切落し 170g（全量）",
+      "緑豆もやし 300g（全量）",
+      "にら 1/2束（50g）",
+      "酒 大さじ1",
+      "塩 小さじ1/3",
+      "こしょう 少々"
     ]
   }
   </script>
 </head>
 <body>
-  <h1>早うま牛しぐれ丼</h1>
-  <p>材料（2人分）</p>
+  <h1>豚バラと野菜蒸し</h1>
+  <p>2人分</p>
   <ul>
-    <li>牛肉（切り落としやこま切れの薄切り） 250〜300g</li>
-    <li>生姜（せん切り） 15g</li>
-    <li>酒 大さじ2</li>
-    <li>砂糖 大さじ2</li>
-    <li>しょうゆ 大さじ3</li>
-    <li>みりん 大さじ2</li>
+    <li>豚バラ切落し 170g（全量）</li>
+    <li>緑豆もやし 300g（全量）</li>
+    <li>にら 1/2束（50g）</li>
+    <li>酒 大さじ1</li>
+    <li>塩 小さじ1/3</li>
+    <li>こしょう 少々</li>
   </ul>
 </body>
 </html>
